syntax = "proto3";

option java_multiple_files = true;
option java_package = "cn.edu.sjtu.ist.ops";
option java_outer_classname = "OpsInternalProto";
option objc_class_prefix = "OPS";

package opsinternal;

service OpsInternal {
    rpc transfer (stream Chunk) returns (stream ParentPath) {}
}

message Chunk {
    bool isFirstChunk = 1;
    string path = 2;
    bytes content = 3;
}

message ParentPath {
    string path = 1;
}